fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,66 @@
 .flex-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  min-height: 98vh;
+}
+
+#topbar {
+  text-align: center;
+  width: 100%;
+  font-size: 2vh;
+  color: white;
+  background: tan;
+}
+
+h1,p {
+  margin: 0;
 }
 
 .drawingBuffer {
-  position: absolute;
+  border: 2px green solid;
+  height: 0vh;
+  width: 0vh;
+  visibility: hidden;
 }
 
 video {
-  min-width: 100%;
-  min-height: 100%;
+  border: 2px blue solid;
+}
 
+#scanner {
+  width: 100%;
+}
+
+#number {
+  font-size: 3vh;
+  text-align: center;
+}
+
+#interactive {
+  border: 2px red solid;
+}
+
+div {
+  border: 1px black solid;
 }
 
 #interactive.viewport canvas, video {
-
-  width: 640px;
-  height: 360px;
+  width: 64vh;
+  height: 36vh;
 }
 
 button {
-  background-color: #4CAF50; /* Green */
+  background-color: brown; /* Green */
   border: none;
   color: white;
-  padding: 10% 25%;
+  padding: 1vh 4vh;
+  margin: 0.5vh;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  border-radius: 8px;
+  font-size: 3vh;
+  border-radius: 1vh;
   cursor: pointer;
 }
 
@@ -37,9 +68,7 @@ button {
     /* For mobile phones: */
 
     .flex-container, #topbar {
-      display: flex;
-      justify-content: center;
-      font-size: 20px;
+
     }
 
 }
